<resources>
    <string name="app_name">飞闪</string>
    <string name="loading">加载中…</string>
    <string name="no_more_data">没有更多数据了</string>
    <string name="better_to_choose_all">选清晰素材最佳</string>
    <string name="confirm">确定</string>
    <string name="install_app_store_notification">请先安装相关应用市场</string>
    <string name="contacts_saved_to_clipboard" translatable="false">友友你好，已为你复制微信号</string>
    <string name="promote_message">添加还可领素材教程</string>
    <string name="weixin">微信登录</string>
    <string name="qq">QQ登录</string>
    <string name="notification">提示</string>
    <string name="have_saved_to_sdcard">已为你保存至本地</string>
    <string name="folder">文件夹</string>
    <string name="got_it">我知道啦</string>
    <string name="to_good_comment">立即好评</string>

    <string name="reject">我在想想</string>
    <string name="cancel">取消</string>
    <string name="check_login_notification" translatable="false">检查到您手机没有安装微信，请安装后使用该功能</string>
    <!--注销账户-->
    <string name="string_cancel_user">注销账号须知</string>
    <string name="string_cancel_user_after">注销账号后</string>
    <string name="string_delete_user_after_one">1. 无法再登录当前账号</string>
    <string name="string_delete_user_after_two">2. 注销行为无法撤销，无法恢复数据</string>
    <string name="string_delete_user_after_shree">3. 所有信息将在72小时内依法合规删除</string>
    <string name="string_delete_user_iknow">我已了解以上后果</string>
    <string name="string_to_delete">申请注销账号</string>
    <string name="string_to_delete_alert">请您先勾选后果</string>

    <string name="remainTime">%1$ds 后重试</string>
    <string name="have_not_login">未登录</string>
    <string name="exitLogin">再按一次退出程序</string>

    <string name="template_collect_success">模板收藏成功</string>
    <string name="template_cancel_success">模板已取消收藏</string>

    <!--    <string name="template_collect_success">模板收藏成功</string>-->
    <!--    <string name="template_cancel_success">模板已取消收藏</string>-->

    <string name="tv_cut_video">裁剪视频</string>
    <string name="toast_crop_toolong">时长超过10分钟，请重新选择</string>
    <string name="toast_crop_tooshort">裁剪时长小于两秒，请重新选择</string>
    <string name="render_error">渲染出错，请重试保存</string>
    <string name="export_failure">导出失败</string>

    <string name="cancel_login">取消登录</string>
    <string name="login_fail">登录失败</string>


    <string name="join_us">加入友友交流群</string>
    <string name="get_gift">领取100套背景素材</string>


    <string name="permission_alert">模板更新通知</string>
    <string name="permission_content">开启通知后，将不定时为你推送最新热门模板</string>
    <string name="toGetPermission">去开启通知</string>
    <string name="slide_choose_range">滑动选择视频区间</string>
    <string name="write_error">写文件时出错</string>


    <string name="Permissions_repulse">你已拒绝权限，打开即可获得飞闪优质功能</string>
    <string name="no_audio_files">没有音频文件！</string>


    <string name="ad_alert_title">亲爱的友友</string>
    <string name="ad_alert_content_0">这个模板需要观看几秒广告</string>
    <string name="ad_alert_content_1">「看完后就能制作飞闪视频」</string>


    <string name="template">模板</string>
    <string name="template_edit">编辑</string>
    <string name="template_bj">换背景</string>
    <string name="template_music">换音乐</string>
    <string name="capture_permission_no">拒绝</string>
    <string name="capture_permission_message">拍摄视频需要摄像权限，如需使用相关功能，请选择同意</string>
    <string name="capture_permission_ok">同意</string>
    <string name="text_background">背景</string>
    <string name="text_mould">模板</string>
    <string name="text_search">搜索</string>
    <string name="text_message">换装</string>
    <string name="text_flash">闪图</string>
    <string name="text_mine">我的</string>

    <string name="dvertising">广告</string>
    <string name="need_login">请先登录</string>
    <string name="make_sure">确定</string>
    <string name="follow">关注</string>
    <string name="to_make">马上制作</string>
    <string name="make_sure_exit">确定要退出码？</string>
    <string name="close">关闭</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="vip_center">会员中心</string>
    <string name="cancel_pay">尚未支付成功，请重新支付</string>
    <string name="pay_success">支付成功</string>

</resources>
