<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:gravity="center"
    android:layout_height="match_parent">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="338dp"
        android:layout_margin="32dp"
        android:src="@mipmap/show_ad_bj" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ad_video" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_margin="32dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="63dp"
            android:text="@string/ad_alert_title"
            android:textColor="#122B31"
            android:textSize="30sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/tv_content_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/ad_alert_content_0"
            android:textColor="#3A3A3A"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_content_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/ad_alert_content_1"
            android:textColor="#3E99FF"
            android:textSize="22sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:layout_marginTop="49dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:src="@mipmap/ad_alert_bt" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="63dp"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/tv_cancle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2" />


                <TextView
                    android:id="@+id/tv_watch_ad"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="3" />

            </LinearLayout>


        </RelativeLayout>

    </LinearLayout>


</RelativeLayout>